<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Ubao</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_favourites">Favourites</string>
    <string name="action_logout">Logout</string>
    <string name="username"> Username</string>
    <string name="submit">S U B M I T </string>
    <string name="fill">F I L L \u00A0 \u00A0   U P </string>
    <string name="email">Email</string>
    <string name="password"> Password</string>
    <string name="reset">Forgot the password? reset here!!</string>
    <string name="login"> L O G I N </string>
    <string name="signup">S I G N \u00A0  U P</string>
    <string name="activity_subscriptions">Subscriptions</string>
    <string name="activity_start">Start</string>
    <string name="activity_login">Login</string>
    <string name="activity_signup">Sign Up</string>
    <string name="image_contentdesc">Content Description for every image</string>
    <string name="blogs_subscriptions_header_message">Get Started by selecting your favourite News sources</string>
    <string name="error_title">Oops</string>
    <string name="title_activity_read">Read</string>
    <string name="action_settings">Settings</string>
    <string name="Postview">Postview</string>
    <string name="error_message">An error occurred when fetching posts</string>
    <string name="retry">Retry</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="desc_list_item">contents</string>
    <string name="info_item">Profile</string>
    <string name="test_text">Launch of the most exciting News application that ignites all news from your favorite blogs and Sites in Tanzania</string>
    <string name="app_desc">Ubao is a news app that scrapes web Content around the Internet from your favourite News sources</string>
    <string name="feedback_button">SEND FEEDBACK</string>
    <string name="dummy_header_text">The Official Chereko Chereko video from Cpwaa</string>
    <string name="dialog_header">About this blog</string>

    <string-array name="drawer_items">
        <item>Explore</item>
        <item>Stand</item>
        <item>Settings</item>
        <item>About</item>
    </string-array>
    <string-array name="spinner_items">
        <item>News</item>
        <item>Showbiz</item>
        <item>Sports</item>
    </string-array>

    <string name="title_activity_newspaper_subscriptions">NewspaperSubscriptions</string>
    <string name="newspaper_label">N E W S P A P E R S</string>
    <string name="blogs_label">B L O G S</string>
    <string name="empty_list">No items to displayed</string>

    <string-array name="spinner_source">
        <item>B L O G S</item>
        <item>N E W S P A P E R S</item>
    </string-array>


</resources>
