<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="@color/lightgray">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp"
        android:text="@string/fill"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/text" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        style="@style/card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/txtemaillg"
            style="@style/textbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <TextView
            style="@style/textboxline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </TextView>

        <EditText
            android:id="@+id/txtpasswordlg"
            style="@style/textbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/password"
            android:inputType="textPassword" />
    </LinearLayout>

    <Button
        android:id="@+id/btnsumbitlg"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout1"
        android:layout_below="@+id/linearLayout1"
        android:layout_marginTop="34dp"
        android:background="@color/cat_red"
        android:text="@string/submit" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:onClick="pressed"
        android:text="@string/reset"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/text" />

</RelativeLayout>