<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ubao.Signup"
    tools:ignore="MergeRootFrame" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/lightgray" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="18dp"
            android:text="@string/fill"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/text" />

        <LinearLayout
            android:id="@+id/linearLayout1"
            style="@style/card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/txtusernamesu"
                style="@style/textbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/username"
                android:inputType="textPersonName" >

                <requestFocus />
            </EditText>

            <TextView
                style="@style/textboxline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
            </TextView>

            <EditText
                android:id="@+id/txtemailsu"
                style="@style/textbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

            <TextView
                style="@style/textboxline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
            </TextView>

            <EditText
                android:id="@+id/txtpasswordsu"
                style="@style/textbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/password"
                android:inputType="textPassword" />
        </LinearLayout>

        <Button
            android:id="@+id/btnsubmitsu"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayout1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="54dp"
            android:background="@color/cat_red"
            android:padding="10dp"
            android:onClick="clicked"
            android:text="@string/submit" />

    </RelativeLayout>

</FrameLayout>

